[package]
name = "sp-qkd"
version = "0.1.0"
edition = "2021"
authors = ["Paraxiom"]
description = "Quantum Key Distribution primitives for Substrate"
license = "MIT OR Apache-2.0"

[dependencies]
async-trait = "0.1.73"
parking_lot = "0.12.1"
log = "0.4.20"
thiserror = "1.0.48"
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }

# Optional: Only needed if you want to integrate with Substrate runtime
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.10.1", optional = true, default-features = false }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.10.1", optional = true, default-features = false }

[features]
default = ["std"]
std = [
    "sp-runtime?/std",
    "sp-core?/std",
]

[dev-dependencies]
tempfile = "3.8.0"
